--- a/BackendDevelopementAPIs/boilerplate-npm/package.json
+++ b/BackendDevelopementAPIs/boilerplate-npm/package.json
@@ -1,5 +1,10 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "Natalie Chin-Merz",
+	"description": "A project that does something awesome",
+	"keywords":["freeCodeCamp", "npm-boilerplate"],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
